# proper-grinder

./: .cursorrules  .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: button.rs  config.rs  main.rs  pin_config.rs
